移除不需要的文件. 调整功能!

--- a/view/.env.development
+++ b/view/.env.development
@@ -5,7 +5,7 @@ VITE_USE_MOCK = true
 VITE_PUBLIC_PATH = /
 
 # Basic interface address SPA
-VITE_GLOB_API_URL=/basic-api
+VITE_GLOB_API_URL=http://localhost:9999
 
 # File upload address， optional
 VITE_GLOB_UPLOAD_URL=/upload
