--- a/java-admin/pom.xml
+++ b/java-admin/pom.xml
@@ -24,6 +24,8 @@
         <alibaba-druid.version>1.2.6</alibaba-druid.version>
         <!--mybatis-plus-->
         <mybatis.version>3.5.2</mybatis.version>
+        <!--hutool-->
+        <hutool.version>5.8.20</hutool.version>
     </properties>
 
     <packaging>pom</packaging>
@@ -33,7 +35,7 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
-                <version>3.1.1</version>
+                <version>2.7.7</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
