--- a/client/app.yml
+++ b/client/app.yml
@@ -1,6 +1,6 @@
-port: 9999 #端口号
+port: 9998 #端口号
 mysqlUrl: "root:root@tcp(192.168.101.90:3306)/t_gorm?charset=utf8mb4&parseTime=True&loc=Local" #数据库链接
-#   - "/*" 排除所有   - "/admin/*" 排除admin下所有
+#如果你的路径是 / 杆结尾那么请 + 上/
 excludePath:
   - "/"
   - "/admin/login"
